--- a/bundled/weather.infinitymodule/README.html
+++ b/bundled/weather.infinitymodule/README.html
@@ -63,7 +63,7 @@ SOFTWARE.
 </head>
 <body>
 <article class="markdown-body">
-<div class="Warning">
+<div class="Error">
 <p><strong>REQUIRED</strong> — An OpenWeatherMap.org API Key is required to use this module.</p>
 </div>
 <h1 id="steps-to-finish-setup">Steps to finish setup</h1>
@@ -109,6 +109,33 @@ SOFTWARE.
 <div class="Success">
 <p><strong>Success</strong> — You can now finish configuring the module by entering a location in the <strong>Location</strong> configuration option.</p>
 </div>
+<h3>Valid Location Formats:</h3>
+<ul>
+  <li> City, Country Code:
+    <ul>
+      <li>Atlanta, US</li^>
+      <li>Berlin, DE</li^>
+    </ul>
+  </li>
+  <li> Zip Code, Country Code:
+    <ul>
+      <li>30303, US</li^>
+      <li>10115, DE</li^>
+    </ul>
+  </li>
+  <li> Coordinates (latitude, longitude):
+    <ul>
+      <li>33.75, -84.38</li^>
+      <li>52.520008, 13.404954</li^>
+    </ul>
+  </li>
+  <li> City by ID:
+    <ul>
+      <li>4180439</li^>
+      <li>2950159</li^>
+    </ul>
+  </li>
+</ul>
 </article>
 </body>
 </html>
