- Updated weather README.html to include valid location formats

--- a/bundled/weather.infinitymodule/README.html
+++ b/bundled/weather.infinitymodule/README.html
@@ -63,7 +63,20 @@ SOFTWARE.
 </head>
 <body>
 <article class="markdown-body">
-<div class="Error">
+<hr>
+<nav id="TOC">
+<h1 class="toc-title">Contents</h1>
+<ul>
+<li><a href="#steps-to-finish-setup">Steps to finish setup</a><ul>
+<li><a href="#register-for-an-account">Register for an account</a></li>
+<li><a href="#locating-your-api-key">Locating your API Key</a></li>
+<li><a href="#entering-your-api-key-into-infinity-dashboard">Entering your API Key into Infinity Dashboard</a></li>
+</ul></li>
+<li><a href="#valid-location-formats">Valid Location Formats</a></li>
+</ul>
+</nav>
+<hr>
+<div class="Warning">
 <p><strong>REQUIRED</strong> — An OpenWeatherMap.org API Key is required to use this module.</p>
 </div>
 <h1 id="steps-to-finish-setup">Steps to finish setup</h1>
@@ -104,37 +117,33 @@ SOFTWARE.
 <li>Paste the copied API Key into the field.</li>
 </ul>
 <div class="Alert">
-<p><strong>Tip</strong> — You can reuse this API key for multiple modules. You can <kbd>Right Click</kbd> the module in the list and select the <kbd>Duplicate</kbd> option to copy it and <em>ALL</em> of it’s configured values.</p>
+<p><strong>Tip</strong> — You can reuse this API key for multiple modules. You can <kbd>Right Click</kbd> the module in the list and select the <kbd>Duplicate</kbd> option to copy it and <em>ALL</em> of it’s configuration into a new module.</p>
 </div>
 <div class="Success">
 <p><strong>Success</strong> — You can now finish configuring the module by entering a location in the <strong>Location</strong> configuration option.</p>
 </div>
-<h3>Valid Location Formats:</h3>
+<h1 id="valid-location-formats">Valid Location Formats</h1>
 <ul>
-  <li> City, Country Code:
-    <ul>
-      <li>Atlanta, US</li^>
-      <li>Berlin, DE</li^>
-    </ul>
-  </li>
-  <li> Zip Code, Country Code:
-    <ul>
-      <li>30303, US</li^>
-      <li>10115, DE</li^>
-    </ul>
-  </li>
-  <li> Coordinates (latitude, longitude):
-    <ul>
-      <li>33.75, -84.38</li^>
-      <li>52.520008, 13.404954</li^>
-    </ul>
-  </li>
-  <li> City by ID:
-    <ul>
-      <li>4180439</li^>
-      <li>2950159</li^>
-    </ul>
-  </li>
+<li>City, Country Code:
+<ul>
+<li>Atlanta, US</li>
+<li>Berlin, DE</li>
+</ul></li>
+<li>Zip Code, Country Code:
+<ul>
+<li>30303, US</li>
+<li>10115, DE</li>
+</ul></li>
+<li>Coordinates (latitude, longitude):
+<ul>
+<li>33.75, -84.38</li>
+<li>52.520008, 13.404954</li>
+</ul></li>
+<li>City by ID:
+<ul>
+<li>4180439</li>
+<li>2950159</li>
+</ul></li>
 </ul>
 </article>
 </body>
